# mrlogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_android.sh  mrlogger.sln
include/: mrlogger.h  printer.h
include/printer/: console_printer.h  file_printer.h  silent_printer.h
lib/: CMakeLists.txt
lib/printer/: console_printer.cpp  file_printer.cpp  silent_printer.cpp
src/: mrlogger.cpp  mrlogger.h
test/: CMakeLists.txt  mrlogger_test.cpp
